--- a/index.html
+++ b/index.html
@@ -247,10 +247,10 @@
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">Appointment Booking Calendar Sync</h3>
                     <p class="text-claude-muted-tan mb-4">When someone books an appointment, the workflow creates a Google Calendar event, stores the record in Airtable, and sends email confirmations. It also handles reschedules and cancellations automatically.</p>
                     <div class="flex gap-3">
-                        <a href="https://smallcaredentalclinic.netlify.app/" target="_blank" rel="noopener noreferrer" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="https://smallcaredentalclinic.netlify.app/" target="_blank" rel="noopener noreferrer" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             VIEW PROJECT <i class="fas fa-arrow-right ml-2"></i>
                         </a>
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="javascript:void(0)" onclick="openDocsModal('Appointment Booking Calendar Sync', 'https://cute-promotion-6fe.notion.site/ebd//2f21c9af8b82807b8fe2ebf17feef219')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             DOCS <i class="fas fa-file-alt ml-2"></i>
                         </a>
                     </div>
@@ -265,10 +265,10 @@
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">Lead Capture → CRM & Email Alerts</h3>
                     <p class="text-claude-muted-tan mb-4">Automatically sends website form submissions to Google Sheets and Airtable, then notifies the team through Gmail and Slack. Helps businesses respond to new leads instantly without manual data entry.</p>
                     <div class="flex gap-3">
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="#" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             VIEW PROJECT <i class="fas fa-arrow-right ml-2"></i>
                         </a>
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="javascript:void(0)" onclick="openDocsModal('Lead Capture → CRM & Email Alerts', '#')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             DOCS <i class="fas fa-file-alt ml-2"></i>
                         </a>
                     </div>
@@ -283,10 +283,10 @@
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">Customer Feedback & Sentiment Tracker</h3>
                     <p class="text-claude-muted-tan mb-4">Collects feedback responses, saves them to Google Sheets, and classifies them as positive or negative. Positive reviews are flagged for testimonials, while negative ones trigger follow-up notifications.</p>
                     <div class="flex gap-3">
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="#" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             VIEW PROJECT <i class="fas fa-arrow-right ml-2"></i>
                         </a>
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="javascript:void(0)" onclick="openDocsModal('Customer Feedback & Sentiment Tracker', '#')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             DOCS <i class="fas fa-file-alt ml-2"></i>
                         </a>
                     </div>
@@ -301,10 +301,10 @@
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">Email Inquiry to Database Sync</h3>
                     <p class="text-claude-muted-tan mb-4">Reads incoming contact emails, extracts key details, and saves them into a database or Airtable. Automatically sends a reply to confirm the message was received.</p>
                     <div class="flex gap-3">
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="#" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             VIEW PROJECT <i class="fas fa-arrow-right ml-2"></i>
                         </a>
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="javascript:void(0)" onclick="openDocsModal('Email Inquiry to Database Sync', '#')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             DOCS <i class="fas fa-file-alt ml-2"></i>
                         </a>
                     </div>
@@ -319,10 +319,10 @@
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">YouTube Content Automation Workflow</h3>
                     <p class="text-claude-muted-tan mb-4">Automatically collects new YouTube video data (title, link, publish date) and saves it into Airtable or Google Sheets for tracking. The workflow also sends a notification when a new video is uploaded to the channel.</p>
                     <div class="flex gap-3">
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="#" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             VIEW PROJECT <i class="fas fa-arrow-right ml-2"></i>
                         </a>
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="javascript:void(0)" onclick="openDocsModal('YouTube Content Automation Workflow', '#')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             DOCS <i class="fas fa-file-alt ml-2"></i>
                         </a>
                     </div>
@@ -337,10 +337,10 @@
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">Full Lead Capture & CRM Pipeline (n8n)</h3>
                     <p class="text-claude-muted-tan mb-4">Captures leads from a website form using a webhook, stores them in Airtable or a database, and sends an automated email reply. The workflow also triggers a Slack alert so the team can follow up immediately.</p>
                     <div class="flex gap-3">
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="#" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             VIEW PROJECT <i class="fas fa-arrow-right ml-2"></i>
                         </a>
-                        <a href="#" class="text-white hover:text-claude-orange font-semibold inline-flex items-center transition-colors">
+                        <a href="javascript:void(0)" onclick="openDocsModal('Full Lead Capture & CRM Pipeline (n8n)', '#')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             DOCS <i class="fas fa-file-alt ml-2"></i>
                         </a>
                     </div>
@@ -541,14 +541,24 @@
     <!-- Footer -->
     <footer class="bg-claude-darker-bg border-t border-border-color py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="text-claude-muted-tan mb-6">Everything here moves at a frequency.<br>
-Explore, learn, and tune your mind to higher understanding—<br>
-where curiosity becomes resonance,<br>
-ideas turn into energy,<br>
-and growth begins the moment you listen.</p>
+            <p class="text-claude-muted-tan mb-6">Everything here moves at a frequency. <br> Explore, learn, and tune your mind—
+where curiosity resonates, ideas spark energy,<br> and growth begins when you listen.</p>
             <p class="text-claude-muted-tan mt-6">&copy; 2026 Rommel Tima. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Modal for displaying Notion documentation -->
+    <div id="docsModal" class="fixed inset-0 bg-black bg-opacity-75 hidden z-50 flex items-center justify-center p-4">
+        <div class="bg-gray-900 rounded-lg w-full max-w-4xl max-h-[90vh] flex flex-col">
+            <div class="flex justify-between items-center p-4 border-b border-gray-700">
+                <h3 id="modalTitle" class="text-xl font-bold text-white">Project Documentation</h3>
+                <button id="closeModal" class="text-white text-2xl hover:text-claude-orange transition-colors">&times;</button>
+            </div>
+            <div class="p-4 flex-grow overflow-auto bg-white rounded-b-lg">
+                <iframe id="notionFrame" src="" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 
     <!-- JavaScript -->
     <script src="script.js"></script>
