--- a/index.html
+++ b/index.html
@@ -260,15 +260,15 @@
                 <div class="fade-in-up card p-6">
                     <div class="h-48 bg-gradient-to-br from-claude-soft-blue to-claude-orange rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                         <div class="absolute inset-0 bg-[url('data:image.svg+xml,%3Csvg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg fill="%23ffffff" fill-opacity="0.1"%3E%3Cpath d="M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E')] opacity-20"></div>
-                        <img src="./assets/images/make-logo3.webp" alt="Project Image" class="w-full h-full object-cover rounded-lg"> 
+                        <img src="./assets/images/websitepic_proj2.jpg" alt="Project Image" class="w-full h-full object-cover rounded-lg"> 
                     </div>
-                    <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">Lead Capture → CRM & Email Alerts</h3>
-                    <p class="text-claude-muted-tan mb-4">Automatically sends website form submissions to Google Sheets and Airtable, then notifies the team through Gmail and Slack. Helps businesses respond to new leads instantly without manual data entry.</p>
+                    <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-orange">Dental Clinic Lead Capture → CRM & Team Alerts</h3>
+                    <p class="text-claude-muted-tan mb-4">Automatically sends website form submissions to Airtable and Google Sheets, then notifies clients and staff through Gmail and Slack. Helps businesses respond to valid leads instantly while tracking rejected entries.</p>
                     <div class="flex gap-3">
                         <a href="javascript:void(0)" onclick="openLoomModal('Lead Capture → CRM & Email Alerts', 'YOUR_LOOM_URL_HERE')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             WATCH DEMO <i class="fas fa-arrow-right ml-2"></i>
                         </a>
-                        <a href="javascript:void(0)" onclick="openDocsModal('Lead Capture → CRM & Email Alerts', '#')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
+                        <a href="javascript:void(0)" onclick="openDocsModal('Lead Capture → CRM & Email Alerts', 'https://smallcaredentalclinic.netlify.app/')" class="text-white hover:opacity-80 font-semibold inline-flex items-center transition-opacity">
                             DOCS <i class="fas fa-file-alt ml-2"></i>
                         </a>
                     </div>
