--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             
             <!-- Scroll Indicator -->
             <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2 fade-in">
-                <a href="#about" class="text-claude-blue animate-bounce">
+                <a href="#about" class="text-black animate-bounce">
                     <i class="fas fa-chevron-down text-3xl"></i>
                 </a>
             </div>
@@ -290,7 +290,7 @@
                 <div class="fade-in-up card p-6">
                     <div class="h-48 bg-gradient-to-br from-blue-600 to-blue-400 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                         <div class="absolute inset-0 bg-[url('data:image.svg+xml,%3Csvg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg fill="%23ffffff" fill-opacity="0.1"%3E%3Cpath d="M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E')] opacity-20"></div>
-                        <img src="./assets/images/make-logo3.webp" alt="Project Image" class="w-full h-full object-cover rounded-lg">
+                        <img src="./assets/images/n8n-759.png" alt="Project Image" class="w-full h-full object-cover rounded-lg">
                     </div>
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-blue">Customer Feedback & Sentiment Tracker</h3>
                     <p class="text-claude-muted-tan mb-4">Collects feedback responses, saves them to Google Sheets, and classifies them as positive or negative. Positive reviews are flagged for testimonials, while negative ones trigger follow-up notifications.</p>
@@ -308,7 +308,7 @@
                 <div class="fade-in-up card p-6">
                     <div class="h-48 bg-gradient-to-br from-blue-400 to-blue-600 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                         <div class="absolute inset-0 bg-[url('data:image.svg+xml,%3Csvg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg fill="%23ffffff" fill-opacity="0.1"%3E%3Cpath d="M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E')] opacity-20"></div>
-                        <img src="./assets/images/n8n-logo.png" alt="Project Image" class="w-full h-full object-cover rounded-lg">
+                        <img src="./assets/images/n8n-759.png" alt="Project Image" class="w-full h-full object-cover rounded-lg">
                     </div>
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-blue">Email Inquiry to Database Sync</h3>
                     <p class="text-claude-muted-tan mb-4">Reads incoming contact emails, extracts key details, and saves them into a database or Airtable. Automatically sends a reply to confirm the message was received.</p>
@@ -326,7 +326,7 @@
                 <div class="fade-in-up card p-6">
                     <div class="h-48 bg-gradient-to-br from-blue-400 to-blue-600 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                         <div class="absolute inset-0 bg-[url('data:image.svg+xml,%3Csvg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg fill="%23ffffff" fill-opacity="0.1"%3E%3Cpath d="M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E')] opacity-20"></div>
-                        <img src="./assets/images/n8n-logo.png" alt="Project Image" class="w-full h-full object-cover rounded-lg">
+                        <img src="./assets/images/n8n-759.png" alt="Project Image" class="w-full h-full object-cover rounded-lg">
                     </div>
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-blue">YouTube Content Automation Workflow</h3>
                     <p class="text-claude-muted-tan mb-4">Automatically collects new YouTube video data (title, link, publish date) and saves it into Airtable or Google Sheets for tracking. The workflow also sends a notification when a new video is uploaded to the channel.</p>
@@ -344,7 +344,7 @@
                 <div class="fade-in-up card p-6">
                     <div class="h-48 bg-gradient-to-br from-blue-600 to-blue-400 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                         <div class="absolute inset-0 bg-[url('data:image.svg+xml,%3Csvg width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg"%3E%3Cg fill="none" fill-rule="evenodd"%3E%3Cg fill="%23ffffff" fill-opacity="0.1"%3E%3Cpath d="M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E')] opacity-20"></div>
-                        <img src="./assets/images/n8n-logo.png" alt="Project Image" class="w-full h-full object-cover rounded-lg">
+                        <img src="./assets/images/n8n-759.png" alt="Project Image" class="w-full h-full object-cover rounded-lg">
                     </div>
                     <h3 class="text-2xl font-futuristic font-bold mb-2 text-claude-blue">Full Lead Capture & CRM Pipeline (n8n)</h3>
                     <p class="text-claude-muted-tan mb-4">Captures leads from a website form using a webhook, stores them in Airtable or a database, and sends an automated email reply. The workflow also triggers a Slack alert so the team can follow up immediately.</p>
