--- a/index.html
+++ b/index.html
@@ -123,34 +123,34 @@
             <div class="relative w-full carousel-wrapper">
                 <div class="carousel-container">
                     <div class="carousel-track" data-direction="rtl" data-speed="1">
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="HTML5">
                             <img src="https://cdn.simpleicons.org/html5" alt="HTML5" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="JavaScript">
                             <img src="https://cdn.simpleicons.org/javascript" alt="JavaScript" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="Tailwind CSS">
                             <img src="https://cdn.simpleicons.org/tailwindcss" alt="Tailwind CSS" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="React">
                             <img src="https://cdn.simpleicons.org/react" alt="React" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="Python">
                             <img src="https://cdn.simpleicons.org/python" alt="Python" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="Node.js">
                             <img src="https://cdn.simpleicons.org/nodedotjs" alt="Node.js" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="MongoDB">
                             <img src="https://cdn.simpleicons.org/mongodb" alt="MongoDB" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="Express.js">
                             <img src="https://cdn.simpleicons.org/express" alt="Express.js" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="Git">
                             <img src="https://cdn.simpleicons.org/git" alt="Git" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
+                        <div class="tech-icon-wrapper" data-label="GitHub">
                             <img src="https://cdn.simpleicons.org/github" alt="GitHub" class="tech-icon" />
                         </div>
                     </div>
@@ -161,35 +161,35 @@
             <div class="relative w-full carousel-wrapper">
                 <div class="carousel-container">
                     <div class="carousel-track" data-direction="ltr" data-speed="1">
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/nodedotjs" alt="Node.js" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Make">
+                            <img src="https://cdn.simpleicons.org/make" alt="Make" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/python" alt="Python" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="n8n">
+                            <img src="https://cdn.simpleicons.org/n8n" alt="n8n" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/react" alt="React" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Zapier">
+                            <img src="https://cdn.simpleicons.org/zapier" alt="Zapier" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/tailwindcss" alt="Tailwind CSS" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="HubSpot">
+                            <img src="https://cdn.simpleicons.org/hubspot" alt="HubSpot" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/javascript" alt="JavaScript" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="GoHighLevel">
+                            <img src="./assets/images/GHL-LOGO.jpg" alt="GoHighLevel" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/html5" alt="HTML5" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Airtable">
+                            <img src="https://cdn.simpleicons.org/airtable" alt="Airtable" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/github" alt="GitHub" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Vapi">
+                            <img src="./assets/images/vapi-logo.png" alt="Vapi" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/git" alt="Git" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="OpenAI">
+                            <img src="./assets/images/openAI-logo.png" alt="OpenAI" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/express" alt="Express.js" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Google Apps Script">
+                            <img src="https://cdn.simpleicons.org/google" alt="Google Apps Script" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/mongodb" alt="MongoDB" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="PowerShell">
+                            <img src="./assets/images/PowerShell_Core_6.0_icon.png" alt="PowerShell" class="tech-icon" />
                         </div>
                     </div>
                 </div>
@@ -199,35 +199,35 @@
             <div class="relative w-full carousel-wrapper">
                 <div class="carousel-container">
                     <div class="carousel-track" data-direction="rtl" data-speed="1">
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/express" alt="Express.js" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Postman">
+                            <img src="https://cdn.simpleicons.org/postman" alt="Postman" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/git" alt="Git" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Docker">
+                            <img src="https://cdn.simpleicons.org/docker" alt="Docker" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/github" alt="GitHub" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Supabase">
+                            <img src="https://cdn.simpleicons.org/supabase" alt="Supabase" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/mongodb" alt="MongoDB" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Firebase">
+                            <img src="https://cdn.simpleicons.org/firebase" alt="Firebase" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/nodedotjs" alt="Node.js" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Slack">
+                            <img src="./assets/images/slack-logo.webp" alt="Slack" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/python" alt="Python" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Notion">
+                            <img src="https://cdn.simpleicons.org/notion" alt="Notion" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/react" alt="React" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Twilio">
+                            <img src="./assets/images/twillio-logo.png" alt="Twilio" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/tailwindcss" alt="Tailwind CSS" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Stripe">
+                            <img src="https://cdn.simpleicons.org/stripe" alt="Stripe" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/javascript" alt="JavaScript" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="TypeScript">
+                            <img src="https://cdn.simpleicons.org/typescript" alt="TypeScript" class="tech-icon" />
                         </div>
-                        <div class="tech-icon-wrapper">
-                            <img src="https://cdn.simpleicons.org/html5" alt="HTML5" class="tech-icon" />
+                        <div class="tech-icon-wrapper" data-label="Vercel">
+                            <img src="https://cdn.simpleicons.org/vercel" alt="Vercel" class="tech-icon" />
                         </div>
                     </div>
                 </div>
